--- a/postpage/postpage/postpage-land/postpage100.html
+++ b/postpage/postpage/postpage-land/postpage100.html
@@ -212,7 +212,7 @@
                         <div class="front">
                             <table>
                                 <label class="validation" > <small>*หมายเหตุ : ห้ามนำรูปภาพที่ติดป้ายประกาศอัปโหลดลงประกาศเด็ดขาด มิเช่นนั้น รูปภาพอสังหาฯ 
-                                    จะถูกลบและบัญชีจะถูกระงับการใช้งานและสามารถเลือกรูปภาพสูงสุดได้ 10 ภาพ สำหรับการลงประกาศฟรี 
+                                    จถูกลบและบัญชีจะถูกระงับการใช้งานและสามารถเลือกรูปภาพสูงสุดได้ 10 ภาพ สำหรับการลงประกาศฟรี 
                                     ลำดับของรูปภาพสามารถเคลื่อนย้ายได้โดยคลิกค้าง เพื่อเคลื่อนย้ายไปยังตำแหน่งที่ต้องการ ลำดับแรกสุดจะเป็นรูปที่แสดงในหน้าค้นหา</small></label>
                             </table>
                             <br><br>
