--- a/postpage/postpage/postpage-land/postpage60.html
+++ b/postpage/postpage/postpage-land/postpage60.html
@@ -143,9 +143,48 @@
     
                 </div>
               </div>
-              
+
               <div class="form-container">
                 <h1 class="text" >ข้อมูลโครงการ</h1>
+
+                <p class="sub-text">ที่ตั้ง<span style="color: red;">*</p>
+
+                    <table width="90%"  >
+                        <tr>
+                            <td> 
+                                <p class="text-normal" >ซอย<span style="color: red;">*</span><span> :</p>
+                                <input class="input-textlocation" type="text" >
+                            </td>
+                            <td >
+                                <p class="text-normal" >ถนน<span style="color: red;">*</span><span> :</p>
+                                <input class="input-textlocation" type="text" >
+                            </td>
+                            <td>
+                                <p class="text-normal">แขวง/ตำบล<span style="color: red;">*</span><span> :</p>
+                                    <select  class="select-location" id="" >
+                                        <option>-----------</option>
+                                    </select>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <p class="text-normal">เขต/อำเภอ<span style="color: red;">*</span><span> :</p>
+                                    <select  class="select-location"  id="" >
+                                        <option>-----------</option> 
+                                    </select>
+                            </td>
+                            <td>
+                                <p class="text-normal">จังหวัด<span style="color: red;">*</span><span> :</p>
+                                    <select  class="select-location" id="" >
+                                        <option>-----------</option>
+                                    </select>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <p class="text-normal">ลิงค์ตำแหน่ง Google Maps<span style="color: red;">*</span><span> :</p>
+                    <input  class="input-text1" type="text" >
                  <!-- เช็คบอคไม่ขึ้น -->
                 <p class="sub-text" > สถานที่ใกล้เคียง<span style="color: red;">*</p>
                     <form class="" action="" method="post">
