--- a/postpage/postpage/postpage-land/postpage100.html
+++ b/postpage/postpage/postpage-land/postpage100.html
@@ -160,25 +160,25 @@
                             <div class="col">
                                 <div class="form-group">
                                     <label>  ค่าส่วนกลาง/ตารางเมตร <span style="color: red;">*</span><span></span> :</label>
-                                    <input name="common" type="text" class="form-control" placeholder="">
+                                    <input name="common" type="text" class="input-text1" placeholder="">
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="form-group">
                                     <label> ค่ามัดจำ <span style="color: red;">*</span><span></span> :</label>
-                                    <input name="deposit" type="text" class="form-control" placeholder="">
+                                    <input name="deposit" type="text" class="input-text1"placeholder="">
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="form-group">
                                     <label> ล่วงหน้า/เดือน <span style="color: red;">*</span><span></span> :</label>
-                                    <input name="prepaid" type="text" class="form-control" placeholder=""  >
+                                    <input name="prepaid" type="text" class="input-text1" placeholder=""  >
                                 </div>
                             </div>
                         </div>
                         <br><br>
                         
-                            <h1 class="text">ข้อมูลเพิ่มเติม</h1>
+                            <h1 class="text" style="margin-top: 30px;">ข้อมูลเพิ่มเติม</h1>
                         
                         <div class="col">
                             <div class="form-group">
@@ -234,7 +234,7 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label class=""> URL </label>
-                                        <input name="URLproperty-imag" type="text" class="form-control" placeholder="" >
+                                        <input name="URLproperty-imag" type="text" class="input-text1" placeholder="" >
                                     </div>
                                     <br><br>
                                     <label class="validation"> <small>*หมายเหตุ : ลิงก์สำหรับนำรูปภาพมาใส่</small></label>
