--- a/postpage/postpage/postpage-home/postpage20-2.html
+++ b/postpage/postpage/postpage-home/postpage20-2.html
@@ -147,7 +147,9 @@
                 <h1 class="text">ประกาศ</h1>
     
                 <form >
-                    <p class="sub-text">ชื่อทรัพย์ <span style="color: red;">*</span><span></span>  :</p>
+
+                  
+                    <p class="sub-text">ชื่อโครงการ <span style="color: red;">*</span><span></span>  :</p>
                     <input class="input-text1" type="text"  >
                     <p class="advice" > <span style = "text-decoration: underline;"> คำแนะนำ</span> ผู้ใช้งานไม่ควรกรอกข้อมูลใดๆ ที่อาจมีการเปลี่ยนแปลงในอนาคตลงไป เช่น เบอร์โทรศัพท์ ราคา ฯลฯ
                         ควรใส่ข้อมูลที่จะไม่มีการเปลี่ยนแปลง เช่น ชื่อถนน เขต อำเภอ จังหวัด หรือขนาดพื้นที่</p>
