--- a/postpage/postpage/postpage-land/postpage100.html
+++ b/postpage/postpage/postpage-land/postpage100.html
@@ -235,9 +235,10 @@
                                     <div class="form-group">
                                         <label class=""> URL </label>
                                         <input name="URLproperty-imag" type="text" class="input-text1" placeholder="" >
+                                        <label class="validation"> <small style="color: red;">*หมายเหตุ : ลิงก์สำหรับนำรูปภาพมาใส่</small></label>
+
                                     </div>
-                                    <br><br>
-                                    <label class="validation"> <small>*หมายเหตุ : ลิงก์สำหรับนำรูปภาพมาใส่</small></label>
+                                    
                                 </div>
                             </div>
                         </div>
