--- a/postpage/postpage/postpage-condo/postpage80.html
+++ b/postpage/postpage/postpage-condo/postpage80.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="./style-postform80.css">
+    <link rel="stylesheet" href="../style-postform80.css">
     <link rel="stylesheet" href="../style-postform20.css">
 
 
