--- a/postpage/postpage/postpage-homeoffice/postpage20-2.html
+++ b/postpage/postpage/postpage-homeoffice/postpage20-2.html
@@ -79,15 +79,15 @@
                 <span class='bx bx-building-house icon'></span>
                 <span ><h3>ทาวน์โฮม</h3></span>
               </a>
-              <a  class="active">
+              <a  href="../postpage-villa/postpage20-1.html">
                 <span class='bx bx-home-smile icon' ></span>
                 <span > <h3>วิลล่า </h3></span>
               </a>
-              <a href="/postpage/postpage/postpage-commercial/Postpage20-1.html">
+              <a href="../postpage-commercial/postpage20-1.html">
                 <span class='bx bxs-building-house icon'></span>
                 <span ><h3>อาคารพาณิชย์</h3></span>
               </a>
-              <a href="/postpage/postpage/postpage-homeoffice/Postpage-homeoffice20-1.html">
+              <a class="active"">
                 <span class='bx bx-building-house icon'></span>
                 <span ><h3>โฮมออฟฟิศ</h3></span>
               </a>
