--- a/postpage/postpage/postpage-townhome/postpage20-2.html
+++ b/postpage/postpage/postpage-townhome/postpage20-2.html
@@ -75,11 +75,11 @@
                 <span class='bx bx-home-circle icon'> </span>
                 <h3> คอนโด</h3>
               </a>
-              <a href="../postpage-townhome/postpage20-1.html">
+              <a class="active"">
                 <span class='bx bx-building-house icon'></span>
                 <span ><h3>ทาวน์โฮม</h3></span>
               </a>
-              <a  class="active">
+              <a href="/postpage/postpage/postpage-villa/postpage20-1.html">
                 <span class='bx bx-home-smile icon' ></span>
                 <span > <h3>วิลล่า </h3></span>
               </a>
